# hector_dev

./: pyproject.toml  requirements.txt
mujoco_playground/: pyproject.toml
mujoco_playground/mujoco_playground/_src/: collision.py  gait.py  mjx_env.py
mujoco_playground/mujoco_playground/_src/locomotion/: __init__.py
mujoco_playground/mujoco_playground/config/: locomotion_params.py
playground/: pyproject.toml
src/hector_pg/: base.py  constants.py
src/hector_pg/joystick/: joystick.py  randomize.py
src/hector_pg/joystick_ilab/: joystick.py  randomize.py  rewards.py
src/hector_pg/scripts/: env_test.py  home_qpos_calibrate.py
src/hector_pg/utils/: ankle_decouple.py  gait_test.ipynb
src/hector_pg/wbc/: randomize.py  wbc.py
src/hector_pg/xmls/: hector_v2.xml  scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml
src/logs/joystick/s1_0906_1_h20/: config.json
src/logs/joystick/s1_0906_1_h40/: config.json
src/logs/joystick/s1_h10_1/: config.json
src/logs/joystick/s2_0830_1_h5/: config.json
src/logs/joystick/s2_0905_1_h10/: config.json
src/logs/joystick/s3_h10_1_rough/: config.json
src/logs/wbc/s1_0825_2/: config.json
src/logs/wbc/s1_0827_1/: config.json
src/logs/wbc/s2_0820_3/: config.json
src/logs/wbc/s2_0825_1/: config.json
src/logs/wbc/s2_0827_2/: config.json
src/sim2sim/: brax_to_onnx_joystick.ipynb  joystick_ctr.py  play_hector_joystick.py  play_hector_wbc.py  test_hector_joystick.py
src/train/: train_jax_ppo.py
src/visualize/: jax_cuda_debug.ipynb  roll_tj_joystick.ipynb  roll_tj_wbc.ipynb
(+81 files in other folders)
