[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hector_pg" 
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hector_pg*"]

# include your XML/assets in the wheel
[tool.setuptools.package-data]
hector_pg = ["xmls/*.xml", "xmls/**/*.xml", "assets/**/*"]
